--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>json</artifactId>
             <version>20220924</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>xerial-xml</artifactId>
+            <version>2.0.6</version>
+        </dependency>
     </dependencies>
 
     <build>
