--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,10 @@
         </dependency>
         <dependency>
             <groupId>org.xerial</groupId>
-            <artifactId>xerial-xml</artifactId>
-            <version>2.0.6</version>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.40.0.0</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
